--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@reduxjs/toolkit": "^1.9.3",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
+    "moment": "^2.29.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-format-currency": "0.0.3",
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
