--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@ant-design/react-native": "^5.0.4",
     "@expo/webpack-config": "^18.0.1",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@reduxjs/toolkit": "^1.9.3",
+    "deprecated-react-native-prop-types": "^4.0.0",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
     "moment": "^2.29.4",
     "nativewind": "^2.0.11",
+    "patch-package": "^6.5.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
@@ -25,6 +28,7 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10"
   },
