--- a/package.json
+++ b/package.json
@@ -25,16 +25,21 @@
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
     "react-native-format-currency": "0.0.3",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-heroicons": "^3.2.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-snap-carousel": "^3.9.1",
+    "react-native-select-dropdown": "^3.3.2",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "tailwindcss": "^3.2.7"
+  },
+  "resolutions": {
+    "react-native-reanimated": "^2.9.1"
   },
   "private": true
 }
