--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-elements": "^3.4.3",
     "react-native-format-currency": "0.0.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-heroicons": "^3.2.0",
@@ -32,6 +33,7 @@
     "react-native-screens": "^3.20.0",
     "react-native-select-dropdown": "^3.3.2",
     "react-native-svg": "13.4.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "~0.18.10"
   },
   "devDependencies": {
