--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-select-dropdown": "^3.3.2",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.10"
+    "react-native-web": "~0.18.10",
+    "expo-checkbox": "~2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
